Aside:getElementsByClassName done

--- a/Essential-JS-Concepts/Pumpkins-Purfect-Meme-Picker/Aside-e.target/index.html
+++ b/Essential-JS-Concepts/Pumpkins-Purfect-Meme-Picker/Aside-e.target/index.html
@@ -7,10 +7,11 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="container" id="container">
-		<!--products-->
-	</div>
-	<script src="index.js"></script>
+    <div class="btn-container">
+	    <button class="clear-btn" id="clear-btn">Clear All</button>
+    </div>
+	<div class="container" id="container"></div>
+    <script src="index.js"></script>
 </body>
 
 </html>
