--- a/Essential-JS-Concepts/Pumpkins-Purfect-Meme-Picker/Aside-selection/index.html
+++ b/Essential-JS-Concepts/Pumpkins-Purfect-Meme-Picker/Aside-selection/index.html
@@ -13,7 +13,19 @@
 	<main>
 		<section class="container">
 			<form>
-
+                <label for="superpowers">Choose Your Superpower:</label>
+                <select id="superpowers" size="6">
+                    <optgroup label="physical">
+                        <option value="flight">Flight</option>
+                        <option value="invisibility">Invisibility</option>
+                        <option value="superStrength" selected>Super Strength</option>
+                    </optgroup>
+                    <optgroup label="psychological">
+                        <option value="telepathy">Telepathy</option>
+                        <option value="timeTravel">Time Travel</option>
+                        <option value="wisdom">Wisdom</option>
+                    </optgroup>
+                </select>
 
 				<button type="submit">Reveal My Superpower</button>
 			</form>
